# mathematical

./: Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs  sequences.rs
src/sequences/: fibonacci.rs
