[package]
name = "mathematical"
version = "0.1.0"
authors = ["Chai T. Rex <ChaiTRex@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rug = { version = "1.11.0", optional = true }

[dev-dependencies]
rug = "1.11.0"